# workshopforge

./: .gitignore  .pre-commit-config.yaml  AI_USAGE_GUIDE.md  ANTHROPIC_TEST.md  FEATURES.md  LICENSE  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  install.sh  pyproject.toml
.claude/: context.md
.github/workflows/: ci.yml
examples/minimal/: EXPECTED_OUTPUT.md
examples/minimal/spec/: ai_guidelines.md  modules.yml  profile.yml  project.md  workshop.yml
examples/test-workshop/: README.md
examples/test-workshop/spec/: ai_guidelines.md  modules.yml  profile.yml  project.md  workshop.yml
forge/: AI_USAGE_GUIDE.md  __init__.py  cli.py  content_validator.py  generator.py  loader.py  orchestrator.py  policies.py  prelude.py  reporters.py  utils.py  validator.py
forge/providers/: __init__.py  anthropic.py  base.py  echo.py  openai.py
forge/schemas/: modules.schema.json
forge/templates/docs/: lab.md.j2
forge/templates/repo/: COURSE.md.j2
forge/templates/repo/.claude/: CLAUDE.md.j2
forge/templates/repo/.git-hooks/: README.md  prepare-commit-msg
forge/templates/repo/.github/workflows/: basic_checks.yml.j2
forge/templates/repo/instructor/slides/: slide_deck.md.j2
schemas/: profile.schema.json  workshop.schema.json
scripts/: check_ai_usage_guide.py
templates/repo/: README.md.j2
templates/repo/instructor/notes/: notes.md.j2
templates/repo/labs/: _module_README.md.j2
